
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Fixed transparency in .png for TV [#14906]
- Add missing unsigned attribute to integer foreign key fields in mysql schema [#14902]
- Remove legacy grids: workspace/lexicon/lexicon.topic.grid.js, workspace/lexicon/language.grid.js, widgets/security/modx.grid.role.user.js, widgets/resource/modx.grid.resource.security.js [#14875]
- Change the way deprecated class aliases are included [#14912]
- Make sure processors are instantiated with getInstance for derivative logic [#14921]
- Add updated DI Container and add support for namespaces to define a bootstrap.php file to init/register services [#14920]
- Fix resources showing twice in the tree when marking a resource as deleted from the resource panel [#14893]

MODX Revolution 3.0.0-alpha1  (December 12, 2019)
====================================
- Fix deprecation warnings on curly brace string offset access syntax for PHP 7.4 compatibility [#14863]
- Format timestamp to date & time in edit file panel [#14883]
- Add links to grid items in manager [#14864]
- Fix stretched user avatars in dashboard widgets [#14840]
- Set autocomplete to off on username in user edit form [#14839]
- Fix limit for context settings [#14819]
- Allow in-line editing in FC sets grid [#14781]
- Prevent users without edit_locked permission from editing locked elements [#14739]
- Lock setup after it is successfully executed [#14692]
- Generate sortable tag signature with serialized array values [#14689]
- Escape instances of new MySQL reserved word rank [#14705]
- Fix broken avatar when default media source is modified [#14544]
- Define IMG_WEBP constant in version of PHP without it [#14647]
- Setup redesign [#14507]
- Add widget welcome dashboard changes [#14607]
- Media browser reload [#14570]